<resources>
    <string name="app_name">UTSProject</string>
    <string name="BinusEzyFood">TextView</string>
    <string name="binus_ezyfood">Binus EzyFood</string>
    <string name="stock_available">Stock Available!!</string>
    <string name="drinks">Drinks</string>
    <string name="todo">TODO</string>
    <string name="menu">Menu:</string>
    <string name="empty" />
    <string name="foods">Foods</string>
    <string name="topup">Topup</string>
    <string name="snacks">Snacks</string>
    <string name="cholocate_milk">Cholocate Milk</string>
    <string name="soya_milk">Soya Milk</string>
    <string name="rp_15_000">Rp. 15.000</string>
    <string name="soda">Soda</string>
    <string name="rp_12_000">Rp. 12.000</string>
    <string name="rp_10_000">Rp. 10.000</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="orange_juice">Orange Juice</string>
    <string name="menu_drinks">Menu: Drinks</string>
    <string name="mie_goreng">Mie Goreng</string>
    <string name="rp_35_000">Rp 35.000</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="rp_38_000">Rp 38.000</string>
    <string name="nasi_kuning">Nasi Kuning</string>
    <string name="rp_30_000">Rp 30.000</string>
    <string name="nasi_kerabu">Nasi Kerabu</string>
    <string name="rp_45_000">Rp 45.000</string>
    <string name="menu_foods">Menu: Foods</string>
    <string name="menu_snacks">Menu: Snacks</string>
    <string name="lays">Lays</string>
    <string name="rp_9_000">Rp. 9.000</string>
    <string name="oreo">Oreo</string>
    <string name="rp_3_000">Rp. 3.000</string>
    <string name="komo">Komo</string>
    <string name="rp_3_0000">Rp 3.000</string>
    <string name="supreme_oreo">Supreme Oreo</string>
    <string name="rp_200_000">Rp 200.000</string>
    <string name="orders">Orders</string>
    <string name="Delete">Delete</string>
    <string name="Order">Order</string>
    <string name="Update">Update</string>
</resources>